- Bugfix: ScreencaupterMovingImageFactory could throw IllegalArgumentException, thanks Peter for finding that bug
- Bugfix: DockController.ensureFocusSet could throw NPE
- API, Bugfix: AbstractDockable, changing the "action-offers" through "setActionOffers" will immediately be visible anywhere.
- Bugfix: DockFrontend.clean could be stuck in an infinite loop
- API: DockFrontendListener.showed renamed to shown
- API: DockFrontendListener.shown/hidden is now called for every Dockable, even if the Dockable was not shown or hidden through the methods of DockFrontend.
- API: The SingleParentRemover of DockController can now be exchanged, the property "singleParentRemove" has been deleted: if a remover is present, it is used. Otherwise the feature is disabled.
- API: DockControllerListener replaced by several smaller listeners that handle only one kind of events.
- API: New property ScreenDockStation.BOUNDARY_RESTRICTION: allows to put restrictions on size and location of children of a ScreenDockStation.
- Bugfix: FlapDockStationFactory did not read layout correctly when Dockables were missing
- API: Many factories divided in two parts. Part 1 is the factory, part 2 is the "layout". A layout is snapshot of some data. Factories can read and write layouts from/to streams and xml files. Factories can convert layouts into the original data.
- API: Support for xml, intended for debugging purposes.
- Bugfix: SplitDockStation fired dockableAdding/Added-Event to often.

[Beta v1.1]
- API: DefaultkeyBoardController renamed to DefaultKeyboardController
- Doc: Correction for GlassedPane and OverpaintablePanel
- API: DefaultDockable and DefaultCDockable now have BorderLayout set as default LayoutManager
- Bugfix: unique id of MultipleCDockables was not always created correctly, so unique ids were not always unique
- Bugfix: Several bugs in the Common project concerning the transition of modes of children of CWorkingAreas.    