@@ -8,8 +8,9 @@ import bibliothek.gui.Dockable;
 import bibliothek.gui.dock.action.view.ActionViewConverter;
 import bibliothek.gui.dock.action.view.ViewGenerator;
 import bibliothek.gui.dock.action.view.ViewTarget;
+import bibliothek.gui.dock.themes.basic.action.BasicButtonModel;
 import bibliothek.gui.dock.themes.basic.action.BasicTitleViewItem;
-import bibliothek.gui.dock.themes.basic.action.buttons.BasicMiniButton;
+import bibliothek.gui.dock.themes.basic.action.buttons.MiniButton;
 import bibliothek.gui.dock.themes.basic.action.dropdown.DropDownViewItem;
 import bibliothek.gui.dock.themes.basic.action.menu.MenuViewItem;
 import bibliothek.notes.view.actions.IconAction;
@@ -30,7 +31,7 @@ public class NoteEclipseTheme extends EclipseTheme {
 
 			public BasicTitleViewItem<JComponent> create( ActionViewConverter converter, IconAction action, Dockable dockable ){
 				IconButtonHandler handler = new IconButtonHandler( action, dockable );
-				BasicMiniButton button = new BasicMiniButton( handler );
+				MiniButton<BasicButtonModel> button = createTitleMiniButton( handler );
 				handler.setModel( button.getModel() );
 				return handler;
 			}
